# gene-app

./: .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  README.md  app.py  cloudbuild.yaml  conftest.py  docker-compose.yml  entrypoint.sh  gunicorn_conf.py  manage.py  mypy.ini  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
api/: api_comment.py  main.py
api/routers/: file.py  health.py  video.py
common/: auth.py  exceptions.py  msg.py  utils.py
db/: settings.py
